test/bad/type_missmatch_13.mpp
print floor(1.0) + 1.0;
